1.1.3 Dec  9th 2004
	- Changed command setup to AP_INIT_TAKE12 from AP_INIT_TAKE1 GeoIPDBFile (merv)
	- Memory Leak fix when using GeoIP Region database
	- Memory Leak fix when using GeoIP City database (Shane Nelson)

1.1.2 Aug 12th 2004
	- Added support for GeoIP Netspeed Edition ( Frank Mather )
	- Added support for GeoIP City setting GEOIP_DMA_CODE, GEOIP_AREA_CODE, GEOIP_LATITUDE,
		GEOIP_LONGITUDE, and GEOIP_POSTAL_CODE ( Frank Mather )

1.1.1 Jul 12th 2004
	- Added more documentation for using from PHP
	- Fixed compile errors and warnings

1.1.0 Apr 19th 2004
	- Added support for GeoIP Region, City, ISP and Organization ( Frank Mather )

1.0.6 Aug 30th 2002
	- Added GeoIP_delete upon cleanup ( Corris Randall )

1.0.5 Aug 29th 2002
	- Initial Release ( Corris Randall )